--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </nav>
         <div class="container">
             <div class="me">
-                <img src="image/me.JPG" alt="">
+                <img src="image/Myself.jpg" alt="">
             </div>
             <div class="header-text">
                 <p>Programmer | Competitive Programming</p>
