--- a/index.html
+++ b/index.html
@@ -161,13 +161,13 @@
                     <i class="fa-solid fa-code"></i>
                     <h2>Python</h2>
                     <p>Strong Python Fundamentals</p>
-                    <a href="">Learn More</a>
+                    <a href="Python.html">Learn More</a>
                 </div>
                 <div onclick="location.href='Coder.html';">
                     <i class="fa-solid fa-code"></i>
                     <h2>Coder</h2>
                     <p>I am a competetive programmer.</p>
-                    <a href="">Learn more</a>
+                    <a href="Coder.html">Learn more</a>
                 </div>
                 <div onclick="location.href='WebDev.html';">
                     <i class="fa-solid fa-code"></i>
