Update: Achvmnt, Arrangement!

--- a/MyAc.html
+++ b/MyAc.html
@@ -57,11 +57,27 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="image/greeting_card.png" alt="Image">
+                    <img src="image/Bug4Ever.png" alt="Image">
+                    <div class="layer">
+                        <h3>Bug4Ever</h3>
+                        <p>Competitive Programming</p>
+                        <a href="pdfs/Bug4Ever.pdf"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="image/newton_school1.png" alt="Image">
                     <div class="layer">
                         <h3>Newton School</h3>
                         <p>Competitive Programming</p>
-                        <a href="image/greeting_card.png"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="image/newton_school1.png"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
+                    <img src="image/newton_school2.png" alt="Image">
+                    <div class="layer">
+                        <h3>Newton School</h3>
+                        <p>Competitive Programming</p>
+                        <a href="image/newton_school2.png"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
