--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
     </div>
 </div>
 <div id="content">
+    <nav id="nav">
+        <img src="image/logo.png" id="logo" class="logo">
+        <ul id="sidemenu">
+            <li><a href="#header">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#portfolio">My Work</a></li>
+            <li><a href="#achievements">Achievements</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <i class="fa-solid fa-xmark" onclick="menu()"></i>
+        </ul>
+        <i class="fa-solid fa-bars" id="open" onclick="menu()"></i>
+    </nav>
     <div id="header">
-        <nav id="nav">
-            <img src="image/logo.png" id="logo" class="logo">
-            <ul id="sidemenu">
-                <li><a href="#header">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#portfolio">My Work</a></li>
-                <li><a href="#achievements">Achievements</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <i class="fa-solid fa-xmark" onclick="menu()"></i>
-            </ul>
-            <i class="fa-solid fa-bars" id="open" onclick="menu()"></i>
-        </nav>
         <div class="container">
             <div class="me">
                 <img src="image/Myself.jpg" alt="">
@@ -91,12 +91,12 @@
         <div class="container">
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
-                <div class="work">
-                    <img src="SnakeLadder/img2.jpg" alt="Image">
+                <div class="work" id="NetflixBG">
+                    <img src="image/NetflixWebsiteClone.jpeg" alt="Image">
                     <div class="layer">
-                        <h3>Snake Ladder</h3>
+                        <h3>Netflix-Clone</h3>
                         <p>Click!</p>
-                        <a href="SnakeLadder/index.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="Netflix/index.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -141,11 +141,11 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="image/greeting_card.png" alt="Image">
+                    <img src="image/Bug4Ever.png" alt="Image">
                     <div class="layer">
-                        <h3>Newton School</h3>
+                        <h3>Bug4Ever</h3>
                         <p>Competitive Programming</p>
-                        <a href="image/greeting_card.png"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="pdfs/Bug4Ever.pdf"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
             </div>
@@ -187,10 +187,10 @@
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-tittle">Contact Me</h1>
-                    <p><i class="fa-solid fa-paper-plane"></i> yv44905@gmail.com</p>
+                    <p><i class="fa-solid fa-paper-plane"></i> yashvarma2702@gmail.com</p>
                     <p><i class="fa-sharp fa-solid fa-square-phone"></i> 8369146457</p>
                     <div class="social-icons">
-                        <a href="https://instagram.com/yashvarma._?igshid=YzgyMTM2MGM="><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://instagram.com/yashhvarma_?igshid=YzgyMTM2MGM="><i class="fa-brands fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/in/yashhvarma"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="https://twitter.com/_YashVarma_?t=eCmStTDqxjuDdFMqITGDGA&s=09"><i class="fa-brands fa-twitter"></i></a>
                         <a href="https://github.com/yashgv"><i class="fa-brands fa-github"></i></a>
