--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="./Tic Tac Toe/Tic_tac_toe.svg.png" alt="Image">
+                    <img src="./image/disney.png" style="height: 100%;"  alt="Image">
                     <div class="layer">
-                        <h3>Tic Tac Toe</h3>
+                        <h3>A React based project!</h3>
                         <p>Click!</p>
-                        <a href="./Tic Tac Toe/index.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="https://yashgv.github.io/DisneyHotstar-Clone"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -112,7 +112,7 @@
                     <div class="layer">
                         <h3>CCD Clone</h3>
                         <p>Click!</p>
-                        <a href="CCD/index.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="https://yashgv.github.io/CafeCoffeDay/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>    
                 </div>
             </div>
