--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="./image/disney.png" style="height: 100%;"  alt="Image">
+                    <img src="./image/disney.png"  alt="Image">
                     <div class="layer">
                         <h3>A React based project!</h3>
                         <p>Click!</p>
