--- a/MorePf.html
+++ b/MorePf.html
@@ -21,7 +21,7 @@
                     <div class="layer">
                         <h3>Netflix-Clone</h3>
                         <p>Click!</p>
-                        <a href="Netflix/index.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="https://yashgv.github.io/Netflix-clone/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -29,7 +29,7 @@
                     <div class="layer">
                         <h3>CCD Clone</h3>
                         <p>Click!</p>
-                        <a href="CCD/index.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="https://yashgv.github.io/CafeCoffeDay/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>    
                 </div>
                 <div class="work">
@@ -56,7 +56,14 @@
                         <a href="https://aimlessonly.github.io/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
-                
+                <div class="work">
+                    <img src="./image/disney.png"  alt="Image">
+                    <div class="layer">
+                        <h3>A React based project!</h3>
+                        <p>Click!</p>
+                        <a href="https://yashgv.github.io/DisneyHotstar-Clone"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
