--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="layer">
                         <h3>Netflix-Clone</h3>
                         <p>Click!</p>
-                        <a href="Netflix/index.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="https://yashgv.github.io/Netflix-clone/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
